--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -1,13 +1,38 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+<!--register.wxml-->
+<view class="page-body">
+  <view class="page-section">
+    <text>欢迎使用铃铛兼职推广员系统</text>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view class="xieyi">
+    <text>1.作为本公司的推广员，应当遵守公司的管理制度。</text>
+    <text>2.铃铛游戏作为一个休闲的游戏平台，推广时严禁使用带暗示的赌博倾向用语，一经发现永久取消推广员资格，情节严重的将举报公安机关处理！。</text>
+    <text>3.在推广过程中发生的费用和法律纠纷由推广员承担。</text>
+    <text>4.推广员资格为每年年审一次，年审不通过的将取消推广员资格。</text>
+    <checkbox-group bindchange="checkboxChange">
+      <checkbox>同意以上协议</checkbox>
+    </checkbox-group>
+  </view>
+  <view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" placeholder="真实姓名" bindinput="onInputName" />
+      </view>
+    </view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" maxlength="18" placeholder="身份证号码" bindinput="onInputSID" />
+      </view>
+    </view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" type="digit" placeholder="手机号码" bindinput='onInputMobile' />
+      </view>
+    </view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" placeholder="备注" />
+      </view>
+    </view>
+    <button type="primary" disabled="{{!hasAgreed}}" bindtap="onButtonRegister">申请成为推广员</button>
   </view>
 </view>
