--- a/pages/register/register.wxss
+++ b/pages/register/register.wxss
@@ -1,8 +1,19 @@
-/**index.wxss**/
-.userinfo {
+/**register.wxss**/
+@import "../../lib/weui.wxss";
+
+.tile {
+  display: flex;
+  align-items: center;
+}
+
+.xieyi {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.section {
+  margin: 10px;
 }
 
 .userinfo-avatar {
