--- a/app.wxss
+++ b/app.wxss
@@ -1,6 +1,8 @@
 /**app.wxss**/
+@import 'utils/weui.wxss';
+
 .container {
-  height: 100%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
