--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -1,8 +1,8 @@
 <!--main.wxml-->
-<view class="page-body">
-  <view class="userinfo">
+<view class="page">
+  <view class="page__hd">
       <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+      <text class="icon-box__title">{{userInfo.nickName}}</text>
   </view>
   <view class="page-section">
     <view class="section__title">我的奖金: {{userInfo.cash}}</view>
