--- a/pages/customer/customer.wxss
+++ b/pages/customer/customer.wxss
@@ -26,7 +26,7 @@
   display: flex;
   width: 100%;
   color: #fff;
-  background: #3366ff;
+  background: gray;
   border-bottom: 2rpx solid #777777;
   text-align: center;
   line-height: 80rpx;
@@ -40,6 +40,7 @@
 }
 .td {
   width: 33%;
+  text-align: center;
 }
 .log-list {
   display: flex;
