--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -6,7 +6,7 @@
     <text style="font-size:12px">备注:达到10元以上才能提现,结算t+5.</text>
   </view>
   <view class="weui-grids">
-    <view class="weui-grid" wx:for="{{routers}}" wx:key="name">
+    <view class="weui-grid" wx:for="{{routers}}" wx:if="{{item.show}}" wx:key="name">
       <navigator url="{{item.url}}">
         <view class="weui-grid__bg">
           <view class="weui-grid__icon">
