--- a/pages/customer/customer.wxss
+++ b/pages/customer/customer.wxss
@@ -1,3 +1,14 @@
+page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.box {
+  flex: 1
+}
+
 .swiper-tab {
   width: 100%;
   border-bottom: 2rpx solid #777777;
