--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -4,13 +4,12 @@
     <text>欢迎使用铃铛兼职推广员系统</text>
   </view>
   <view class="xieyi">
-    <text>1.作为本公司的推广员，应当遵守公司的管理制度。</text>
-    <text>2.注册时您应该使用真实的身份信息,非真实信息将影响提现。</text>
-    <text>3.铃铛游戏作为一个休闲的游戏平台，推广时严禁使用带暗示的赌博倾向用语，一经发现永久取消推广员资格，情节严重的将举报公安机关处理！</text>
-    <text>4.在推广过程中发生的费用和法律纠纷由推广员承担。</text>
-    <text>5.铃铛游戏有权随时调整奖励额度和方式。</text>
-    <text>6.连续3个月内推广总收益低于20元的，平台有权取消推广员资格。</text>
-    <text>7.推广员资格为每年年审一次，年审不通过的将取消推广员资格。</text>
+    <text>1.铃铛游戏作为一个休闲的游戏平台，推广时严禁使用带暗示的赌博倾向用语，一经发现永久取消推广员资格，情节严重的将举报公安机关处理！</text>
+    <text>2.在推广过程中发生的费用和法律纠纷由推广员承担。</text>
+    <text>3.铃铛游戏有权随时调整奖励额度和方式。</text>
+    <text>4.默认最多拥有10名下级推广员，玩家数量无限制。</text>
+    <text>5.连续3个月内推广总收益低于20元的，平台有权取消推广员资格。</text>
+    <text>6.推广员资格为每年年审一次，年审不通过的将取消推广员资格。</text>
     <checkbox-group bindchange="checkboxChange">
       <checkbox>同意以上协议</checkbox>
     </checkbox-group>
