--- a/pages/txsp/txsp.wxml
+++ b/pages/txsp/txsp.wxml
@@ -13,6 +13,7 @@
       <view class="td">{{order.cash}}</view>
       <view class="td">
         <button type="primary" size="mini" data-order-id="{{order.id}}" data-order-salerid="{{order.salerid}}" data-order-cash="{{order.cash}}" bindtap="onButtonPayCash">同意</button>
+        <button type="warn" size="mini" data-order-id="{{order.id}}" data-order-salerid="{{order.salerid}}" data-order-cash="{{order.cash}}" bindtap="onButtonBackCash">拒绝</button>
       </view>
     </view>
   </block>
