adjuest adword to pay

--- a/pages/sylistBak/sylist.wxss
+++ b/pages/sylistBak/sylist.wxss
@@ -1,17 +1,15 @@
 .swiper-tab {
   width: 100%;
-  border-bottom: 2rpx solid #777;
+  border-bottom: 2rpx solid #777777;
   text-align: center;
   line-height: 80rpx;
 }
-
 .swiper-tab-list {
   font-size: 30rpx;
   display: inline-block;
   width: 50%;
-  color: #777;
+  color: #777777;
 }
-
 .on {
   color: #da7c0c;
   border-bottom: 5rpx solid #da7c0c;
@@ -24,51 +22,31 @@
   overflow: hidden;
 }
 
-.img {
-  width: 50px;
-  height: 50px;
-  padding: 5px;
-}
-
 .th {
   display: flex;
   width: 100%;
   color: #fff;
   background: gray;
-  border-bottom: 2rpx solid #777;
+  border-bottom: 2rpx solid #777777;
   text-align: center;
   line-height: 80rpx;
   font-size: 30rpx;
 }
-
-.item {
+.tr {
   display: flex;
   width: 100%;
   line-height: 60rpx;
   font-size: 30rpx;
-  border-top: 1rpx solid #777;
-  border-bottom: 1rpx solid #777;
 }
-
-.desc {
-  text-align: left;
+.td {
+  width: 33%;
+  text-align: center;
 }
-
-.cash {
-  font-size: 40rpx;
-  color: #da3c0c;
-}
-
-.wz {
-  padding-left: 10px;
-}
-
 .log-list {
   display: flex;
   flex-direction: column;
   padding: 40rpx;
 }
-
 .log-item {
   margin: 10rpx;
 }
