--- a/pages/sylist/sylist.wxml
+++ b/pages/sylist/sylist.wxml
@@ -1,46 +1,11 @@
-<!--customer.wxml-->
-<picker mode="date" value="{{selDate}}" start="2018-09-01" end="2118-09-01" bindchange="bindDateChange">
-    <view class="picker">
-      当前选择的日期: {{selDate}}
+<!--sylist.wxml-->
+<block wx:for="{{mxlist}}" wx:key="unique" wx:for-item="mxitem">
+  <view class="item">
+    <image src='/images/money.png' class='img' />
+    <view class="desc">
+      <view class="cash">收入{{mxitem.cash}}元</view>
+      <view class="wz">时间:{{mxitem.date}}</view>
+      <view class="wz">来源:{{mxitem.desc}}</view>
     </view>
-</picker>
-
-<view class="swiper-tab">
-  <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="switchNav">客户</view>
-  <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="switchNav">下级</view>
-</view>
-
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:{{winHeight - 31}}px" bindchange="bindChange">
-  <swiper-item>
-    <view>
-      <view class="th">
-        <view class="td">玩家账号</view>
-        <view class="td">昵称</view>
-        <view class="td">提成</view>
-      </view>
-      <block wx:for="{{customers}}" wx:key="unique" wx:for-item="customer">
-        <view class="tr">
-          <view class="td">{{customer.id}}</view>
-          <view class="td">{{customer.nickname}}</view>
-          <view class="td">{{customer.cash}}</view>
-        </view>
-      </block>
-    </view>
-  </swiper-item>
-  <swiper-item>
-    <view>
-      <view class="th">
-        <view class="td">下级账号</view>
-        <view class="td">昵称</view>
-        <view class="td">提成</view>
-      </view>
-      <block wx:for="{{subs}}" wx:key="unique" wx:for-item="sub">
-        <view class="tr">
-          <view class="td">{{sub.id}}</view>
-          <view class="td">{{sub.nickname}}</view>
-          <view class="td">{{sub.cash}}</view>
-        </view>
-      </block>
-    </view>
-  </swiper-item>
-</swiper>
+  </view>
+</block>
