--- a/pages/tgysp/tgysp.wxml
+++ b/pages/tgysp/tgysp.wxml
@@ -1,19 +1,38 @@
-<!--txorder.wxml-->
-<view>
-  <view class="th">
-    <view class="td">手机号码</view>
-    <view class="td">真实姓名</view>
-    <view class="td">上级</view>
-    <view class="td">操作</view>
+<!--register.wxml-->
+<view class="page-body">
+  <view class="page-section">
+    <text>将客户开通为铃铛游戏推广员</text>
   </view>
-  <block wx:for="{{tgylist}}" wx:key="unique" wx:for-item="tgy">
-    <view class="tr">
-      <view class="td">{{tgy.salerid}}</view>
-      <view class="td">{{tgy.realname}}</view>
-      <view class="td">{{tgy.superid}}</view>
-      <view class="td">
-        <button type="primary" size="mini" data-tgy-salerid="{{tgy.salerid}}" bindtap="onButtonAgree">同意</button>
+  <view class="xieyi">
+    <text>1.铃铛游戏作为一个休闲的游戏平台，推广时严禁使用带暗示的赌博倾向用语，一经发现永久取消推广员资格，情节严重的将举报公安机关处理！</text>
+    <text>2.在推广过程中发生的费用和法律纠纷由推广员承担。</text>
+    <text>3.铃铛游戏有权随时调整推广奖励的额度和方式。</text>
+    <text>4.默认最多拥有5名下级推广员，玩家数量无限制。</text>
+    <text>5.连续3个月内推广总收益低于20元的，平台有权取消推广员资格。</text>
+    <text>6.推广员资格为每年年审一次，年审不通过的将取消推广员资格。</text>
+    <text>7.只能将自己的客户端开通为推广员，且拥有10名客户后才能开通下级推广员。</text>
+  </view>
+  <view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" placeholder="游戏ID" bindinput="onInputUserid" />
       </view>
     </view>
-  </block>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" placeholder="真实姓名" bindinput="onInputName" />
+      </view>
+    </view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" type="digit" placeholder="手机号码" bindinput='onInputMobile' />
+      </view>
+    </view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" placeholder="备注" bindinput='onInputTgDesc' />
+      </view>
+    </view>
+    <button type="primary" bindtap="onButtonRegister">开通推广员</button>
+  </view>
 </view>
