--- a/pages/tgysp/tgysp.wxml
+++ b/pages/tgysp/tgysp.wxml
@@ -4,13 +4,12 @@
     <text>将客户开通为铃铛游戏推广员</text>
   </view>
   <view class="xieyi">
-    <text>1.铃铛游戏作为一个休闲的游戏平台，推广时严禁使用带暗示的赌博倾向用语，一经发现永久取消推广员资格，情节严重的将举报公安机关处理！</text>
-    <text>2.在推广过程中发生的费用和法律纠纷由推广员承担。</text>
-    <text>3.铃铛游戏有权随时调整推广奖励的额度和方式。</text>
-    <text>4.默认最多拥有5名下级推广员，玩家数量无限制。</text>
-    <text>5.连续3个月内推广总收益低于20元的，平台有权取消推广员资格。</text>
-    <text>6.推广员资格为每年年审一次，年审不通过的将取消推广员资格。</text>
-    <text>7.只能将自己的客户端开通为推广员，且拥有10名客户后才能开通下级推广员。</text>
+    <view>1.铃铛游戏作为一个休闲的游戏平台，推广时严禁使用带暗示的赌博倾向用语，一经发现永久取消推广员资格，情节严重的将举报公安机关处理！</view>
+    <view>2.铃铛游戏有权随时调整推广奖励的额度和方式。</view>
+    <view>3.默认最多拥有5名下级推广员，玩家数量无限制。</view>
+    <view>4.连续3个月内推广总收益低于20元的，平台有权取消推广员资格。</view>
+    <view>5.推广员资格为每年年审一次，年审不通过的将取消推广员资格。</view>
+    <view>6.只能将自己的客户开通为推广员，且拥有10名客户后才能开通下级推广员。</view>
   </view>
   <view>
     <view class="weui-cells weui-cells_after-title">
