--- a/pages/customer/customer.wxml
+++ b/pages/customer/customer.wxml
@@ -1,38 +1,17 @@
 <!--customer.wxml-->
-<view class="swiper-tab">
-  <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="switchNav">{{custile}}</view>
-  <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="switchNav">{{subtile}}</view>
+<view>
+  <view class="th">
+    <view class="td">ID</view>
+    <view class="td">昵称</view>
+    <view class="td">钻石</view>
+  </view>
+  <scroll-view scroll-y style="height: {{winHeight - 31 - 80}}px;">
+    <block wx:for="{{customers}}" wx:key="unique" wx:for-item="customer">
+      <view class="tr">
+        <view class="td">{{customer.subid}}</view>
+        <view class="td">{{customer.nickname}}</view>
+        <view class="td">{{customer.diamond}}</view>
+      </view>
+    </block>
+  </scroll-view>
 </view>
-
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:{{winHeight - 31}}px" bindchange="bindChange">
-  <swiper-item>
-    <view>
-      <view class="th">
-        <view class="td">ID</view>
-        <view class="td">昵称</view>
-      </view>
-      <scroll-view scroll-y style="height: {{winHeight - 31 - 80}}px;">
-        <block wx:for="{{customers}}" wx:key="unique" wx:for-item="customer">
-          <view class="tr">
-            <view class="td">{{customer.subid}}</view>
-            <view class="td">{{customer.nickname}}</view>
-          </view>
-        </block>
-      </scroll-view>
-    </view>
-  </swiper-item>
-  <swiper-item>
-    <view>
-      <view class="th">
-        <view class="td">下级账号</view>
-        <view class="td">昵称</view>
-      </view>
-      <block wx:for="{{subs}}" wx:key="unique" wx:for-item="sub">
-        <view class="tr">
-          <view class="td">{{sub.subid}}</view>
-          <view class="td">{{sub.nickname}}</view>
-        </view>
-      </block>
-    </view>
-  </swiper-item>
-</swiper>
